--- a/Client/index.html
+++ b/Client/index.html
@@ -1,5 +1,28 @@
-<body onload="getData()">
-	<div data-bind="foreach: articles">
-		<h1 data-bind="text: title"></h1>
-	</div>
-</body>
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="utf-8">
+		<title>Projet Services Web</title>
+
+		<link rel="stylesheet" type="text/css" href="CSS/bootstrap.css">
+		<link rel="stylesheet" type="text/css" href="CSS/bootstrap-theme.css">
+		<link rel="stylesheet" type="text/css" href="CSS/style.css">
+
+		<script src="js/jquery.js"></script>
+		<script src="js/bootstrap.min.js"></script>
+		<script src="js/knockout-min.js"></script>
+		<script src="js/knockout.mapping.js"></script>
+		<script src="js/script.js"></script>
+
+		<script src="js/article.js"></script>
+		<script src="js/commentaire.js"></script>
+		<script src="js/roles.js"></script>
+		<script src="js/statusUtilisateur.js"></script>
+		<!--<script src="js/utilisateur.js"></script>-->
+	</head>
+	<body onload="getData()">
+		<div data-bind="foreach: articles">
+			<h1 data-bind="text: title"></h1>
+		</div>
+	</body>
+</html>
