--- a/html_generer/article.html
+++ b/html_generer/article.html
@@ -8,29 +8,29 @@
         <table border="1">
             <thead>
                 <tr>
-                    <th>POSITIONLATITUDE</th>
-                    <th>TITRE</th>
-                    <th>POSITIONLONGITUDE</th>
-                    <th>MOTCLES</th>
-                    <th>PUBLIER_ACTIF</th>
-                    <th>CONTENU</th>
-                    <th>POSITIONNOM</th>
+					<th>Titre</th>
+					<th>Contenu</th>
+					<th>Publication</th>
+					<th>Mots clés</th>
+					<th>Position</th>
+					<th>Longitude</th>
+					<th>Latitude</th>
                 </tr>
             </thead>
             <tbody data-bind="foreach: items">
                 <tr>
-                    <td data-bind="text: positionLatitude"/>
                     <td data-bind="text: titre"/>
+					<td data-bind="text: contenu"/>
+					<td data-bind="text: publier_actif"/>
+					<td data-bind="text: motCles"/>
+					<td data-bind="text: positionNom"/>
                     <td data-bind="text: positionLongitude"/>
-                    <td data-bind="text: motCles"/>
-                    <td data-bind="text: publier_actif"/>
-                    <td data-bind="text: contenu"/>
-                    <td data-bind="text: positionNom"/>
+					<td data-bind="text: positionLatitude"/>
                 </tr>
             </tbody>
         </table>
         <script src='../web/js/libs/jquery/jquery.min.js'></script>
         <script src='../web/js/libs/knockout/knockout-min.js'></script>
-        <script src='RestClient.js'></script>
+        <script src='article.js'></script>
     </body>
 </html>
