--- a/html_generer/commentaire.html
+++ b/html_generer/commentaire.html
@@ -8,7 +8,7 @@
         <table border="1">
             <thead>
                 <tr>
-                    <th>COMMENTAIRE</th>
+                    <th>Commentaire</th>
                 </tr>
             </thead>
             <tbody data-bind="foreach: items">
