--- a/html_generer/roles.html
+++ b/html_generer/roles.html
@@ -8,14 +8,14 @@
         <table border="1">
             <thead>
                 <tr>
-                    <th>DESCRIPTION</th>
-                    <th>NOM</th>
+                    <th>Nom</th>
+                    <th>Description</th>
                 </tr>
             </thead>
             <tbody data-bind="foreach: items">
                 <tr>
+					<td data-bind="text: nom"/>
                     <td data-bind="text: description"/>
-                    <td data-bind="text: nom"/>
                 </tr>
             </tbody>
         </table>
