--- a/html_generer/utilisateur.html
+++ b/html_generer/utilisateur.html
@@ -8,19 +8,19 @@
         <table border="1">
             <thead>
                 <tr>
-                    <th>MOTDEPASSE</th>
-                    <th>NOMUTILISATEUR</th>
-                    <th>PRENOM</th>
-                    <th>NOM</th>
-                    <th>INFO</th>
+                    <th>Nom d'utilisateur</th>
+                    <th>Nom</th>
+                    <th>Prenom</th>
+                    <th>Mot de passe</th>
+                    <th>Infos</th>
                 </tr>
             </thead>
             <tbody data-bind="foreach: items">
                 <tr>
-                    <td data-bind="text: motDePasse"/>
                     <td data-bind="text: nomUtilisateur"/>
-                    <td data-bind="text: prenom"/>
                     <td data-bind="text: nom"/>
+                    <td data-bind="text: prenom"/>
+					<td data-bind="text: motDePasse"/>
                     <td data-bind="text: info"/>
                 </tr>
             </tbody>
