--- a/html_generer/commentaire.html
+++ b/html_generer/commentaire.html
@@ -5,7 +5,8 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
     <body>
-        <table border="1">
+		<h1>Consultation des commentaires</h1>
+        <table class="table table-striped">
             <thead>
                 <tr>
                     <th>COMMENTAIRE</th>
